fix container overflow issue

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
-html, body, body > div {
+html, body {
     height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+#prev-notes-container {
+    height: 100%;
+    overflow: scroll;
 }
 
 .row {
